# moxui

./: .gitignore  Cargo.toml  flake.nix
examples/: fractional_scaling.rs  shape_renderer.rs  texture_renderer.rs
src/: lib.rs
src/buffers/: instance.rs  mod.rs
src/image/: mod.rs
src/renderers/: mod.rs
src/renderers/shape_renderer/: mod.rs  shader.wgsl
src/renderers/text_renderer/: mod.rs
src/renderers/texture_renderer/: mod.rs  shader.wgsl
src/renderers/texture_renderer/blur/: mod.rs  shader.wgsl
src/shape_renderer/: mod.rs  shader.wgsl
src/texture_renderer/: mod.rs  shader.wgsl  viewport.rs
src/texture_renderer/blur/: mod.rs  shader.wgsl
src/utils/: buffers.rs  mod.rs
src/viewport/: mod.rs
tests/: integration.rs
