[package]
name = "moxui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
glyphon = "0.10.0"
wgpu = { version = "28.0.0", default-features = false, features = [
  "wgsl",
  "vulkan",
  "gles",
  "strict_asserts",
] }

[features]
default = ["renderers"]

renderers = [
  "texture_renderer",
  "shape_renderer",
  "text_renderer",
]

texture_renderer = []
shape_renderer = []
text_renderer = []
