[package]
name = "moxui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
glyphon = { version = "0.10.0", optional = true }
wgpu = { version = "28.0.0", default-features = false, features = [
  "wgsl",
  "vulkan",
  "gles",
  "strict_asserts",
] }
image = { version = "0.25.9", default-features = false, features = [
  "jpeg",
  "ico",
  "webp",
  "rayon",
], optional = true }
fast_image_resize = { version = "5.6.0", features = [
  "only_u8x4",
  "rayon",
], optional = true }
serde = { version = "1.0.228", features = ["serde_derive"] }

[dev-dependencies]
pollster = "0.4.0"
winit = "0.30.5"

[features]
default = ["renderers"]

renderers = ["texture_renderer", "shape_renderer", "text_renderer"]

texture_renderer = ["dep:image", "dep:fast_image_resize"]
shape_renderer = []
text_renderer = ["dep:glyphon"]
